# ganulab

./: README.md  pyproject.toml  test.ipynb
ganulab/: __init__.py
ganulab/artifacts/: __init__.py
ganulab/artifacts/layers/: BayesianConv1d.py  BayesianLinear.py  IntervalConv1d.py  IntervalLinear.py  __init__.py
ganulab/artifacts/losses/: __init__.py  perdidas.py
ganulab/data/: __init__.py  dataset.py  encode.py  loader.py  processing.py  scale.py  split.py
ganulab/intro/: __init__.py  saludos.py
ganulab/modeling/: __init__.py  lossfunction.py  neuralblock.py  neurallayer.py  neuralmodel.py
ganulab/training/: __init__.py  criteria.py  engine.py  limitations.py  scheduler.py  seeding.py  strategy.py  topology.py
ganulab/utils/: __init__.py  catalog.py  converter.py  display.py  io.py
