# pyproject.toml

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GANU-Lab"
version = "0.1.0"
description = "Laboratory framework for uncertainty analysis in Generative Adversarial Networks (GAN)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Anthony Rojas", email = "ajrojasfuentes@gmail.com" }
]

dependencies = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.1.0",
    "torch>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.0.292"
]

[project.urls]
Homepage = "https://gitlab.com/ajrojasfuentes/ganu-lab"
Source = "https://gitlab.com/ajrojasfuentes/ganu-lab.git"

# Descubrir paquetes automáticamente
[tool.setuptools.packages.find]
where = ["."]
include = ["ganulab*"]
